--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 cmake
-dlib==19.24.1
-face_recognition==1.3.0
-numpy==1.26.4
+dlib
+face_recognition
+numpy
 Pillow==10.2.0
-streamlit==1.32.0
+streamlit
